fix alignment of main div

--- a/app/src/styles/Tracker.css
+++ b/app/src/styles/Tracker.css
@@ -9,7 +9,7 @@ div {
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr;
     gap: 5%;
-    align-items: baseline;
+    align-items: start;
 }
 
 .cursor-pointer {
